--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,9 +11,14 @@ $violetColor: #665f62;
     justify-content: center;
     align-items: center; 
 }
+@import url('https://fonts.googleapis.com/css?family=Lato&subset=latin-ext');
 
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Lato', sans-serif;
 }
 
 h2 {
@@ -93,26 +98,27 @@ input[type="number"] {
 }
 
 @media screen and (max-width: 995px) , screen and (max-height: 700px) {
-  form {
-    display: flex;
-    flex-direction: column;
-  }
+    form {
+        display: flex;
+        flex-direction: column;
+    }
 
-  h2 {
-    text-align: center;
-  }
+    h2 {
+        text-align: center;
+    }
 
-  .square {
-    width: 100px;
-    height: 100px;
-  }
+    .square {
+        width: 100px;
+        height: 100px;
+    }
   
-  .score-button {
-    width: 100px;
-    height: 100px;
-  }
+    .score-button {
+        width: 100px;
+        height: 100px;
+        font-size: 0.8rem;
+    }
 
-  .submit-button {
-    min-height: 40px;
-  }
+    .submit-button {
+        min-height: 40px;
+    }
 }
